--- a/Default.WebApp.Template.Client/_Imports.razor
+++ b/Default.WebApp.Template.Client/_Imports.razor
@@ -5,3 +5,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Default.WebApp.Template.Client
+@using Default.WebApp.Template.Client.Shared
+@using MudBlazor
